<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginpage.LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="Sign in"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="E-mail"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/passwordHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="Password"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
            android:id="@+id/button_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="BasicLog"
            android:text="Sign in"
            android:layout_marginRight="50dp"/>
        <Button
            android:id="@+id/button_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToSignUp"
            android:text="Sign up"
            android:padding="10dp"
            android:layout_marginLeft="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:backgroundTint="#C8B3B3"
                android:onClick="GitHubLog"
                android:text="Continue with GitHub"
                android:textColor="#000000"
                android:textSize="8sp"
                app:icon="@drawable/github_icon"
                app:iconSize="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#43D622"
                android:onClick="GoogleLog"
                android:text="Continue with Google"
                android:textSize="8sp"
                app:icon="@drawable/google_icon"
                app:iconSize="15dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>