<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_basket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".mainpage.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBasket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_weight = "1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:text="Buy"
            android:onClick="createOrder"
            android:textSize="30sp"
            app:icon="@drawable/shoping_cart_icon"
            app:iconSize="30dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>